# melonDS

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  msys-dist.sh  vcpkg.json
.github/workflows/: build-macos.yml  build-nix.yml  build-ubuntu.yml  build-windows.yml
cmake/: ConfigureVcpkg.cmake
cmake/overlay-triplets/: arm64-mingw-static-release.cmake
res/: melon.rc.in
src/: ARMJIT.cpp  ARMJIT_Memory.h  ARMJIT_RegisterCache.h  CMakeLists.txt  FIFO.h  GBACart.cpp  GBACart.h  GPU.cpp  GPU.h  GPU2D.h  GPU3D.cpp  GPU3D.h  GPU3D_Vulkan.cpp  GPU3D_Vulkan.h  GPU_Vulkan.h  NDS.cpp  NDS.h  SPU.cpp  VulkanSupport.cpp  VulkanSupport.h  types.h
src/ARMJIT_x64/: ARMJIT_Linkage.S
src/debug/: GdbStub.cpp
src/frontend/libslirp/glib/: glib.h
src/frontend/qt_sdl/: CMakeLists.txt  CheatsDialog.cpp  EmuInstance.cpp  EmuInstance.h  EmuInstanceInput.cpp  EmuThread.cpp  Platform.cpp  SaveManager.h  TitleManagerDialog.cpp  VideoSettingsDialog.cpp  VideoSettingsDialog.ui  Window.cpp  main.cpp
src/net/: Net_Slirp.cpp
src/sdl/: CMakeLists.txt  ConfPath.cpp  ConfPath.h  EmuWindow.cpp  EmuWindow.h  Emulator.cpp  Emulator.h  InputDialog.cpp  InputDialog.h  Platform.cpp  PlatformConfig.cpp  PlatformConfig.h  main.cpp
src/switch/: main.cpp
